# Sign-Language-Translation

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.en.md  README.md  SETUP.md  debug.md  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  start_public.ps1  test_results.txt  面试问答.md  项目竞争力分析.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: 部署指南.md
frontend/: index.html
frontend/static/css/: style.css
frontend/static/js/: main.js
scripts/: collect_data.py  export_onnx.py  firewall.bat  gradio_app.py  start.bat  train_csl.py
src/: config.py
src/api/: routes.py
src/backend/: main.py
src/interfaces/: __init__.py  sign_language_model.py  text_translate_model.py
src/models/: __init__.py
src/models/sign_language_model/: __init__.py  csl_recognizer.py  download_hand_gesture.py  mediapipe_detector.py  placeholder_model.py  real_recognizer.py  recognizer.py  sentence_composer.py  vit_encoder.py
src/models/sign_language_model/pretrained/: csl_vocabulary.json
src/models/text_model/: __init__.py  mock_model.py  qwen2_lora_model.py  qwen2_translate_model.py  train.py  word2sent.json
src/models/text_model/lora_word2sent/: README.md  adapter_config.json  adapter_model.safetensors  (+1 more)
src/services/: cosyvoice_tts.py  database.py  emotion_service.py  gender_service.py  history_service.py  sign_service.py  speech_service.py  translate_service.py  video_service.py
src/utils/: frame_processor.py
src/websocket/: handler.py
tests/: test_digit_pipeline.py
